--- a/online-help/concept-using-unified-manager-rest-apis-ocum.adoc
+++ b/online-help/concept-using-unified-manager-rest-apis-ocum.adoc
@@ -13,4 +13,4 @@ Active IQ Unified Manager provides you with REST APIs to view the information ab
 
 You can also execute ONTAP APIs on all ONTAP-managed clusters by using the API gateway supported by Unified Manager.
 
-For information about Unified Manager REST APIs, see link:..api-automation/concept-getting-started-with-getting-started-with-um-apis.html[Getting started with Active IQ Unified Manager].
+For information about Unified Manager REST APIs, see link:../api-automation/concept-getting-started-with-getting-started-with-um-apis.html[Getting started with Active IQ Unified Manager REST APIs].
